# komplexkanbanv3-Team23

./: CMakeLists.txt  README.md  git config  gitconfig.sh
lib/: !=.cpp  *.cpp  +.cpp  -.cpp  <<.cpp  ==.cpp  >>.cpp  abs.cpp  acos.cpp  arg.cpp  asin.cpp  atan.cpp  conj.cpp  cos.cpp  cosh.cpp  div.cpp  exp.cpp  imag.cpp  log.cpp  log10.cpp  norm.cpp  polar.cpp  pow.cpp  powc.cpp  powd.cpp  powi.cpp  real.cpp  sin.cpp  sinh.cpp  sqrt.cpp  tan.cpp  tanh.cpp
src/: CMakeLists.txt  Complex.h  fac.cpp  fac.h  main.cpp  main_test.cpp
